# ichrisbirch

./: .dev.env.secret  .dockerignore  .env.dev  .env.example  .env.prod  .env.secret  .env.test  .flake8  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierrc.json  .prod.env.secret  .shellcheckrc  .sops.yaml  .stylelintrc.json  .test.env.secret  .tokeignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  DESIGN.md  Dockerfile  README.md  STANDARDS.md  TESTING.ipynb  TESTING.py  TESTING_docker_pytest.ipynb  TESTING_polars_logs.ipynb  TESTING_sqlalchemy.ipynb  TESTING_stats_output.ipynb  TODO.md  Z_GIT_WORKFLOW.md  apartments.db  apt.sql  codelog.md  config.py  create-release.sh  (+20 more)
.github/: copilot-instructions.md
.github/workflows/: checks.yml  cicd.yml  create-diagram.yml  db-run-migrations.yml  deploy-docs.yml  deploy-homelab.yml  deploy-ops-changes.yml  deploy-project.yml  ops-update-nginx.yml  ops-update-supervisor.yml  python-cicd.yml  release.yml  reusable-retrieve-webserver-key-and-ip.yml  run-db-migrations.yml  sync-docs-code.yml  terraform-check.yml  validate-project.yml  (+1 more)
.swm/: alembic.x59bxs4t.sw.md  api.0o7t4q84.sw.md  aws.e977p36v.sw.md  backups.32jgg352.sw.md  changelog.pccfhsrf.sw.md  cicd.t0aukecm.sw.md  configuration.7m69nsu9.sw.md  developer_setup.bal1vlml.sw.md  documentation.uvkma6u8.sw.md  domain_names.6b79ntyq.sw.md  git_secret.gf2db5mp.sw.md  index.exjnomrj.sw.md  index.fwknd7et.sw.md  new_database.sll7diyk.sw.md  new_server.3e89zalg.sw.md  nginx.vhngptif.sw.md  pg_cron.efsh9tg8.sw.md  project_layout.io7do96y.sw.md  readme.eu7x1qir.sw.md  readme.gzra8kd6.sw.md  readme.s0x0wrpa.sw.md  running_tests.l6nngv29.sw.md  scheduler.5z852nyb.sw.md  supervisor.49t1jhv2.sw.md  swimm.json  todo.218s06xv.sw.md  troubleshooting.uizgt2cn.sw.md
AWS/: index.html
add_new_app/: index.html
admin/: index.html
alembic/: index.html
api/: index.html
authentication-architecture/: index.html
backup_scripts/: test_backup_restore_function.sh
backups/: index.html  mongo_backup.sh
blue-green-deployment/: index.html
cicd/: index.html
cli/: db  health-check.sh  icb  icbops  ichrisbirch  log_viewer.py  stats
cli-traefik-usage/: index.html
configuration/: index.html
css/: index.html
css_bem/: index.html
deploy/: README.md  deploy-nginx.sh  deploy-redis.sh  deploy-supervisor.sh  deploy.sh  dev.deploy.sh  dev.supervisor.euphoria.conf  nginx.conf  pg_cron_setup.sql  prod.deploy.sh  prod.supervisor.euphoria.conf  supervisor.conf  test.supervisor.conf  update.sh
deploy-metal/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
developer_setup/: index.html
devops/: index.html
docker/: index.html
docker-compose/: index.html
docker-development/: index.html
docker-quick-reference/: index.html
docs/: AWS.md  TODO.md  add_new_app.md  admin.md  alembic.md  api.md  authentication-architecture.md  backups.md  blue-green-deployment.md  cicd.md  cli-traefik-usage.md  configuration.md  css.md  css_bem.md  developer_guide.md  developer_setup.md  developers_guide.md  docker-development.md  documentation.md  documentation_tools.md  domain_names.md  git_secret.md  homelab-deployment.md  html5_semantic.md  index.md  logging-configuration.md  new_database.md  new_server.md  nginx-to-traefik-migration-complete.md  pg_cron.md  project_layout.md  quick-start.md  running_tests.md  scheduler.md  terraform.md  traefik-deployment.md  troubleshooting.md  vue-frontend.md
documentation/: index.html
documentation_tools/: index.html
domain_names/: index.html
euphoria/: __init__.py  app.py  base_logger.py  config.py  create-schemas.py  database.py  easy_dates.py  environment.py  events_sql.sql  init_db.py  runapidev.py  runappdev.py  tasks.sql  wsgi.py
euphoria_old/: __init__.py
frontend/: .prettierrc.json  Caddyfile  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
git_secret/: index.html
homelab-deployment/: index.html
html5_semantic/: index.html
icb-cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
ichrisbirch/: __init__.py  alembic.ini  base_logger.py  config.py  create-schemas.py  environment.py  logger.py  openai_insights_instructions.txt  runapidev.py  runappdev.py  startup.py  util.py  wsgi.py  wsgi_api.py  wsgi_app.py  wsgi_chat.py  wsgi_scheduler.py
logging-configuration/: index.html
mkdocs_plugins/: __init__.py  utils.py  verify.py
nginx-to-traefik-migration-complete/: index.html
project_layout/: index.html
quick-start/: index.html
running_tests/: index.html
scheduler/: index.html
scripts/: README.md  REFERENCE  backup_restore_loop.sh  bash-helpers  bootstrap-homelab.sh  create-release  create-release.py  create-release.sh  create_log_files.sh  create_release.py  deploy  deploy-homelab.sh  deploy-nginx.sh  deploy-project.sh  deploy.sh  environment  get_ssm_parameters.py  logging  make_log_files.sh  mongo-backup  mongo-backup.sh  new_server.sh  ping-test.py  ping_test.py  postgres-snapshot-to-s3  postgres-snapshot-to-s3.sh  postgres_backup.py  postgres_restore.py  profile_test_fixtures.py  start_postgres_container.sh  terraform_infra_check.py  test-docker  test-script-with-hyphens  track-gh-actions-workflow.sh  update_user_preferences_migration.py  utilities.py  validate_html.py
search/: search_index.json
secrets/: README.md  secrets.prod.enc.env  secrets.test.enc.env
stats/: collect_report.py  config.py  emit.py  post_commit_collect.py  pre_commit_capture.py  snapshot.py
stylesheets/: extra.css
terraform/: .terraform.lock.hcl  README.md  backend.tf  iam.tf  imports.tf  index.html  main.tf  network.tf  outputs.tf  providers.tf  route53.tf  terraform.tfvars.secret  variables.tf  versions.tf
tests/: conftest.py  environment.py  helpers.py  test_config.py  test_conftest.py  test_env_file  test_fixtures.py  test_helpers.py  util.py  validate_html.py
traefik-deployment/: index.html
troubleshooting/: index.html
vue-frontend/: index.html
(+1866 files in other folders)
